--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="icon" href="assets/icon.png" type="image/png">
 </head>
 <body>
-    <img id="logo" src="assets/Logo-White.svg" />
+    <div class="flip-container">
+        <div class="flip">
+            <div class="front">
+                <img id="logo" src="assets/Logo-White.svg" />
+            </div>
+            <div class="back">
+                <h1>contact[at]usealder.com</h1>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
